# khipu3

./: 2DMenu.qml  3DMenu.qml  CMakeLists.txt  Khipu2DGridSettings.qml  Khipu2DMenu.qml  Khipu3DMenu.qml  KhipuAddPlot.qml  KhipuAddSpace.qml  KhipuEditPlotDialog.qml  KhipuHideMenuButton.qml  KhipuMenu.qml  KhipuMenuOptions.qml  KhipuPlotDictionaries.qml  KhipuRenameSpace.qml  KhipuScreen.qml  KhipuSpaceDelegate.qml  KhipuSpaceViewer.qml  SpaceViewer.qml  khipu3.pro  khipudata.cpp  khipudata.h  khipufunction.cpp  khipufunction.h  khipuplot.cpp  khipuplot.h  khipuplotmodel.cpp  khipuplotmodel.h  khipuplotsmanager.cpp  khipuplotsmanager.h  khipuplotsmodel.cpp  khipuplotsmodel.h  khipuspace.cpp  khipuspace.h  khipuspacemodel.cpp  khipuspacemodel.h  main.cpp  main.qml  qml.qrc
qml/: KhipuHideMenuButton.qml  KhipuMenu.qml  KhipuMenuOptions.qml  KhipuSpaceDelegate.qml  KhipuSpaceViewer.qml  main.qml
